--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
+    "@popperjs/core": "^2.11.6",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
@@ -39,6 +40,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "^7.26.0",
     "jasmine-core": "~3.8.0",
+    "jquery": "^3.6.3",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
